# ocean-django-backend

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  example.env  pyproject.toml
backend/: README.md
backend/accounts/: drf_urls.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_phone_number.py  0003_alter_user_email.py
backend/accounts/templates/: dashboard.html  email_verified.html  gamification.html  history.html  invalid_verification.html  login.html  rewards.html  signup.html
backend/accounts/templates/email/: verify_email.html
backend/backend/: settings.py  urls.py
backend/common/: admin.py  authentication.py  models.py  sensors.py
backend/common/AI/: NLP.py  core.py
backend/common/migrations/: 0001_initial.py  0002_remove_geovideo_raw_sensor_path.py  0003_alter_geovideo_gps_fix_type_alter_geovideo_lens_and_more.py  0004_alter_geovideo_accelerometer_and_more.py
backend/hazards/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/hazards/migrations/: 0001_initial.py  0002_remove_userreport_user_video.py  0003_userreport_coins_userreport_verification_and_more.py  0004_userreport_proccessed_data.py  0005_userreport_confidence_userreport_severity_and_more.py  0006_userreport_language.py
backend/hazards/templates/: report_submit.html  reporting.html
backend/maps/: drf_urls.py  urls.py  views.py
backend/maps/templates/: map.html
